--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.6
   http: ^0.13.5
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
